--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
               <p class="description">Vichar club at UCET & UCET Relish Tech Club are going to organise a TECHNICAL QUIZ
                 on 15th-16th December.<br>
                 Registration link:- <a
-                  href="https://forms.gle/8ukafPvxLqQB4PFL7">https://forms.gle/8ukafPvxLqQB4PFL7</a></p>
+                  href="https://forms.gle/8ukafPvxLqQB4PFL7"  style="color:purple">https://forms.gle/8ukafPvxLqQB4PFL7</a></p>
             </div>
           </div>
 
@@ -149,7 +149,7 @@
                 a chance to show your talent and win prizes....??
                 <br>
                 Registration link👇🏻
-                <a href="https://forms.gle/kqi1fNTVFMDm4ZrU7">https://forms.gle/kqi1fNTVFMDm4ZrU7</a> .
+                <a href="https://forms.gle/kqi1fNTVFMDm4ZrU7"  style="color:purple">https://forms.gle/kqi1fNTVFMDm4ZrU7</a> .
               </p>
             </div>
           </div>
@@ -160,7 +160,7 @@
               <h4 class="title"><a href="">Image processing through MATLAB</a></h4>
               <p class="description">Vichar_club_at_UCET is going to conduct a webinar on "IMAGE PROCESSING THROUGH
                 MATLAB"
-                <br>Registration link :- <a href="https://bit.ly/2VejqnN">https://bit.ly/2VejqnN</a>
+                <br>Registration link :- <a href="https://bit.ly/2VejqnN" style="color:purple">https://bit.ly/2VejqnN</a>
               </p>
             </div>
           </div>
@@ -342,7 +342,7 @@
 
           <div class="col-lg-6 ">
             <iframe class="mb-4 mb-lg-0"
-              src="https://goo.gl/maps/uexkCUBgaLvhzjRu7"
+              src="https://www.google.com/maps/place/UCET+VBU+Hazaribag/@24.019691,85.36868,17z/data=!3m1!4b1!4m5!3m4!1s0x39f49c36b1388d7d:0xe245eea52c82ac55!8m2!3d24.019691!4d85.3708687"
               frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen alt="map"></iframe>
           </div>
 
