--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 
           <div class="col-lg-6 ">
             <iframe class="mb-4 mb-lg-0"
-              src="https://www.google.com/maps/place/UCET+VBU+Hazaribag/@24.019691,85.36868,17z/data=!3m1!4b1!4m5!3m4!1s0x39f49c36b1388d7d:0xe245eea52c82ac55!8m2!3d24.019691!4d85.3708687"
+              src="assets/img/vc.jpg"
               frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen alt="map"></iframe>
           </div>
 
