--- a/index.html
+++ b/index.html
@@ -341,9 +341,9 @@
         <div class="row" data-aos="fade-up" data-aos-delay="200">
 
           <div class="col-lg-6 ">
-            <iframe class="mb-4 mb-lg-0"
+            <img class="mb-4 mb-lg-0"
               src="assets/img/vc.jpg"
-              frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen alt="map"></iframe>
+              style="border:0; width: 100%; height: 384px;" >
           </div>
 
           <div class="col-lg-6">
@@ -392,7 +392,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>UCET_VICHAR_CLUB</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>UCET_VICHAR_CLUB Site made by Riti</span></strong>. All Rights Reserved
       </div>
       
     </div>
